--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta name="viewport" content="initial-scale=0.4">
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(w/r>=h/r){location.href="../"}</script>
+        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+        <link rel="manifest" href="../manifest.json">
+        <meta name="theme-color" content="#000"/>
+        <link rel="apple-touch-icon" href="/assets/icon192.png">
         <link rel = "stylesheet" href = "index.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
     </head>
     <body>
-        <img src = "../assets/rpi4.png" id = "rpi" />
+        <img src = "../assets/rpi4.png" id = "rpi" alt='rpi4'/>
         <div id = 'title1'></div>
         <button id = 'app' onclick = "location.href = '../app/index.html'">Go to app</button><button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
         <div id = 'title2'><h1>The<br/>Clover Rescue<br/>Project</h1></div>
-        <img id = "clover" src = "../assets/head.jpg"/>
+        <img id = "clover" src = "../assets/head.jpg" alt='clover'/>
         <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down"/></div>
         <div id = "main">
             <p id = 'pt'>Project</p><p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p>
