--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="./mobile/index.html"}</script>
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+        <link rel="manifest" href="./manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id = 'heading'>
-            <img id = 'background' src = './assets/head.jpg' />
+            <img id = 'background' src = './assets/head.jpg' alt='clover'/>
             <p onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm1'>Project</p>
             <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
             <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
             <button id = 'login' onclick = "location.href = './login'">Sign In</button>
             <button id = 'app' onclick = "location.href = './app'">Go to app</button>
             <h1 id='title'>The Clover Rescue Project</h1>
-            <img id = 'down' src = './assets/line-angle-down.svg'/>
+            <img id = 'down' src = './assets/line-angle-down.svg' alt='down'/>
         </div>
         <div id = 'main'>
-            <img id = 'mb1' src = './assets/mb1.jpg' />
+            <img id = 'mb1' src = './assets/mb1.jpg' alt='tx'/>
             <p id = 'pt' ><b>Project</b></p>
             <p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p><br/><br/><br/>
-            <img id = 'mb2' src = './assets/rpi4.png'/>
-            <img id = 'mb3' src = './assets/rpicamera.png'/>
-            <img id = 'mb4' src = './assets/modem.png'/>
+            <img id = 'mb2' src = './assets/rpi4.png' alt='rpi4'/>
+            <img id = 'mb3' src = './assets/rpicamera.png' alt='camera'/>
+            <img id = 'mb4' src = './assets/modem.png' alt='modem'/>
             <p id = 'rht' >Required Hardware</p>
             <p id = 'rh'>
                 The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! 
@@ -36,7 +38,7 @@
             <p id = 'status'></p>
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
         </div>
-        <img id = 'arrowtop' src = './assets/line-angle-down.svg' onclick="smoothJumpUp();"/>
+        <img id = 'arrowtop' src = './assets/line-angle-down.svg' onclick="smoothJumpUp();" alt='^'/>
         <script src = 'index.js'></script>
     </body>
 </html>
