--- a/login/index.html
+++ b/login/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>The Clover Rescue Project</title>
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+        <link rel="manifest" href="../manifest.json">
         <link rel = 'stylesheet' href = 'login.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
