--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
             <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
             <button id = 'login' onclick = "location.href = './login'">Sign In</button>
-            <button id = 'app' onclick = "location.href = './app'">Go to app</button>
+            <button id = 'app' onclick = "location.href = './app/desktop'">Go to app</button>
             <h1 id='title'>The Clover Rescue Project</h1>
             <img id = 'down' src = './assets/line-angle-down.svg' alt='down'/>
         </div>
