--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <title>The Clover Rescue Project</title>
-        <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="./mobile/index.html"}</script>
+        <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="../mobile/index.html"}</script>
         <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
         <link rel="manifest" href="./manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
@@ -11,14 +11,15 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
         <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/socketio-file-upload@0.7.3/client.js"></script>
     </head>
     <body>
-        <div id='photo'><p id = 'snp'>There is no data fetched.<br/><br/><button id = 'gp'>Get photo</button></p></div><p id = 'pt'>LAST PHOTO FROM CLOVER</p>
+        <div id='photocont'><div id="photo"><p id = 'snp'>There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div><p id = 'pt'>LAST PHOTO FROM CLOVER</p>
         <div id='map'></div>
         <canvas id='clover3dview'></canvas>
         <p id = 'ct'>Your Clover</p>
-        <p id = 'status'>🞄 Connected<br/>🞄 In flight</p>
-        <p id = 'alt'>alt: 0 m</p>
+        <p id = 'status'>🞄 Disconnected</p>
+        <p id = 'alt'></p><p id = 'volt'></p>
         <div id = 'actions'>
             <button id = 'rtp'>Return to operator</button>
             <button id = 'l'>Land</button>
@@ -31,6 +32,38 @@
             <label for = "mission" id = "fl">Choose code file</label>
             <input type = "file" id = "mission" name = "mission"/>
             <button id = 'ub'>Upload</button>
+        </div>
+        <div id = 'gpswarn' class = 'warn'><p id = 'gpswarntext' class = 'warntext'>You can't use function 'Return to operator' and monitor coordinates of your Clover, because it's gps module has not caught enough satellites, or you are not using EKF2, also check the settings of your flight controller, following the <a href = 'https://clover.coex.tech/en/gps.html'>instructions</a>.<br/>If everything works correctly, then just wait a bit, when your drone catches a sufficient number of satellites, it's marker will be displayed on the map.</p><img class='close' id='closegpswarn' src = '../../assets/close.png'/></div>
+        <div id = 'rtowarn' class = 'warn'><p class = 'warntext'>Please check parameters in settings, such as 'Return Type', 'Return Altitude', 'Return Speed' and 'Action After Return' in order for this function to execute as you need.</p><img class='close' id='closertowarn' src = '../../assets/close.png'/></div>
+        <div id = 'settingslist'>
+            <p id = 'st'>Settings</p>
+            <p id = 'rtost'>Return To Operator:</p>
+                <p id = 'rtos'>Altitude: <input id = 'rtosalt' placeholder = '20' maxlength="3" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m
+                    <br/>
+                    Speed: <input id = 'rtosspeed' placeholder = '6' maxlength = '2' oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m/s
+                    <br/>
+                    Action: <select id = 'action'>
+                        <option selected='selected' id = 'a1' value=1>Hover</option>
+                        <option id = 'a2' value=2>Land</option>
+                    </select><br/>
+                    Return to: <select id = 'returnto'>
+                        <option selected='selected' id = 'rt1' value=1>My coordinates</option>
+                        <option id = 'rt2' value=2>Takeoff coordinates</option>
+                    </select>
+                </p>
+            <p id = 'gphst'>Get Photo:</p>
+                <p id = 'gphs'>
+                    Automatically take photos: <select id = 'atp'>
+                        <option id = 'gp1' selected='selected' value=1>Never</option>
+                        <option id = 'gp2' value=2>Every 100 m/s</option>
+                        <option id = 'gp3' value=3>Every 500 m/s</option>
+                        <option id = 'gp4' value=4>Every 1s</option>
+                        <option id = 'gp5' value=5>Every 30s</option>
+                        <option id = 'gp6' value=6>Every 1m</option>
+                    </select>
+                </p>
+            <img class='close' id='closesettings' src = '../../assets/close.png'/>
+            <button id = 'savesettings'>Save</button>
         </div>
         <script src = 'index.js' type='module'></script>
     </body>
