--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -5,7 +5,7 @@
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="../mobile/index.html"}</script>
         <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
         <link rel="manifest" href="../../manifest.json">
-        <link rel = 'stylesheet' href = './index.css'/>
+        <link rel = 'stylesheet' href = 'index.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
@@ -65,6 +65,6 @@
             <img class='close' id='closesettings' src = '../../assets/close.png'/>
             <button id = 'savesettings'>Save</button>
         </div>
-        <script src = './index.js' type='module'></script>
+        <script src = 'index.js' type='module'></script>
     </body>
 </html>
