--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -4,7 +4,7 @@
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="../mobile/index.html"}</script>
         <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
-        <link rel="manifest" href="../../manifest.json">
+        <link rel="manifest" href="./manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
