replace reboot to disarm

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -23,7 +23,7 @@
         <div id = 'actions'>
             <button id = 'rtp'>Return to operator</button>
             <button id = 'l'>Land</button>
-            <button id = 'r'>Reboot</button>
+            <button id = 'r'>Disarm</button>
             <button id = 'h'>Hover</button>
             <button id = 'settings'>Settings</button>
         </div>
