added instructions button

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -64,6 +64,7 @@
             <img class='close' id='closesettings' src = '../../assets/close.png'/>
             <button id = 'savesettings'>Save</button>
         </div>
+        <button id = 'getInstructions'>Instructions</button>
         <script src = 'index.js' type='module'></script>
     </body>
 </html>
