--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="./mobile/index.html"}</script>
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="./manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
+        <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+        <link rel ="stylesheet" href="loading-bar.css">
     </head>
     <body>
         <div id = 'heading'>
@@ -39,6 +42,7 @@
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
         </div>
         <img id = 'arrowtop' src = './assets/line-angle-down.svg' onclick="smoothJumpUp();" alt='^'/>
+        <div id = 'loading'><img src = '/assets/logo_x192.svg' id='loadingLogo'/></div>
         <script src = 'index.js'></script>
     </body>
 </html>
