--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,13 +4,16 @@
         <meta name="viewport" content="initial-scale=0.4">
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(w/r>=h/r){location.href="../"}</script>
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../assets/fav.ico">
         <link rel="manifest" href="../manifest.json">
         <meta name="theme-color" content="#000"/>
         <link rel="apple-touch-icon" href="/assets/icon192.png">
         <link rel = "stylesheet" href = "index.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
+        <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+        <link rel ="stylesheet" href="../loading-bar.css">
     </head>
     <body>
         <img src = "../assets/rpi4.png" id = "rpi" alt='rpi4'/>
@@ -29,6 +32,7 @@
             <p id = 'status'></p>
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
         </div>
+        <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo'/></div>
         <script src = 'index.js'></script>
     </body>
 </html>
