icons update, added preload

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>The Clover Rescue Project</title>
         <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="../mobile/index.html"}</script>
-        <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../../assets/fav.ico">
         <link rel="manifest" href="../../manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
         <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+        <link rel ="stylesheet" href="../../loading-bar.css">
     </head>
     <body>
         <div id='photocont'><div id="photo"><p id = 'snp'>There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div><p id = 'pt'>LAST PHOTO FROM CLOVER</p>
@@ -65,6 +68,7 @@
             <button id = 'savesettings'>Save</button>
         </div>
         <button id = 'getInstructions'>Instructions</button>
+        <div id = 'loading'><img src = '../../assets/logo_x192.svg' id='loadingLogo'/></div>
         <script src = 'index.js' type='module'></script>
     </body>
 </html>
