--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <meta charset = 'utf8'/>
         <title>The Rescue Clover Project</title>
-        <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../../assets/fav.ico">
         <link rel="manifest" href="../../manifest.json">
         <link rel="stylesheet" href="./index.css" />
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
         <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+        <link rel ="stylesheet" href="../../loading-bar.css">
     </head>
     <body>
         <canvas id='clover3dview'></canvas>
@@ -65,6 +68,7 @@
         </div>
         <p id = 'status'>Disconnected</p>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <div id = 'loading'><img src = '../../assets/logo_x192.svg' id='loadingLogo'/></div>
         <script src = './index.js' type = 'module'></script>
     </body>
 </html>
