major ui/ux update

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <title>The Clover Rescue Project</title>
-        <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="../mobile/index.html"}</script>
+        <script>if(screen.width<screen.height){location.href="../mobile/index.html"}</script>
         <link rel="icon" type="image/x-icon" href="../../assets/fav.ico">
         <link rel="manifest" href="../../manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
