--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script>if(screen.width>screen.height){location.href="../desktop/index.html"}</script>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <meta charset = 'utf8'/>
         <title>The Rescue Clover Project</title>
@@ -26,6 +27,9 @@
                     <button id = 'rtp'>Return</button><br/><br/>
                     <button id = 'h'>Hover</button>
                     <button id = 'r'>Disarm</button>
+                </div>
+                <div class="swiper-slide">
+                    <div id = 'map'></div>
                 </div>
                 <div class="swiper-slide" id = 'photoslide'>
                     <p id = 'pt' align="center">LAST PHOTO FROM CLOVER</p><div id='photocont'><div id="photo"><p id = 'snp' align="center">There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div>
