--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <title>The Clover Rescue Project</title>
-        <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){location.href="./mobile/index.html"}</script>
+        <script>if(screen.width<screen.height){location.href="./mobile/index.html"}</script>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="./manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
@@ -19,7 +20,7 @@
             <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
             <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
             <button id = 'login' onclick = "location.href = './login'">Sign In</button>
-            <button id = 'app' onclick = "location.href = './app/desktop'">Go to app</button>
+            <button id = 'app' onclick = "location.href = './app/desktop/'">App</button>
             <h1 id='title'>The Clover Rescue Project</h1>
             <img id = 'down' src = './assets/line-angle-down.svg' alt='down'/>
         </div>
@@ -35,10 +36,12 @@
                 The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! 
             </p>
             <p id = 'rt' >Sign up</p><br/><p id = 'rt2'>to get The Clover Rescue Project software for free!</p>
-            <input placeholder='Nickname' id = 'nickname'/>
-            <input placeholder='Password' id = 'password' type='password'/>
-            <button id = 'signup' onclick = 'signup();'>Sign Up</button>
-            <p id = 'status'></p>
+            <div id = 'signupcont'>
+                <input placeholder='Nickname' id = 'nickname'/><br/><br/><br/>
+                <input placeholder='Password' id = 'password' type='password'/><br/><br/><br/>
+                <button id = 'signup' onclick = 'signup();'>Sign Up</button><br/><br/><br/>
+                <p id = 'status'></p>
+            </div>
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
         </div>
         <img id = 'arrowtop' src = './assets/line-angle-down.svg' onclick="smoothJumpUp();" alt='^'/>
