--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -38,15 +38,15 @@
                     <div id = 'upload'>
                         <p id = 'ut'>Upload Mission</p>
                         <label for = "mission" id = "fl">Choose code file</label>
-                        <input type = "file" id = "mission" name = "mission"/>
+                        <input type = "file" id = "mission" name = "mission" accept="text/x-python"/>
                         <button id = 'ub'>Upload & Run</button>
                     </div></div>
                 <div class="swiper-slide">
                     <p id = 'st'>Settings</p>
                     <p id = 'rtost'>Return To Operator:</p>
-                        <p id = 'rtos'>Altitude: <input id = 'rtosalt' placeholder = '20' maxlength="3" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m
+                        <p id = 'rtos'>Altitude: <input id = 'rtosalt' placeholder = '20' maxlength="2" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m
                             <br/>
-                            Speed: <input id = 'rtosspeed' placeholder = '6' maxlength = '2' oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m/s
+                            Speed: <input id = 'rtosspeed' placeholder = '6' maxlength = '1' oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>m/s
                             <br/>
                             Action: <select id = 'action'>
                                 <option selected='selected' id = 'a1' value=1>Hover</option>
@@ -70,6 +70,9 @@
                 </div>
               </div>
         </div>
+        <div id = 'rtowarn' class = 'warn'><p class = 'warntext'>Please check parameters in settings, such as 'Return Type', 'Return Altitude', 'Return Speed' and 'Action After Return' in order for this function to execute as you need.</p><img class='close' id='closertowarn' src = '../../assets/close.png'/></div>
+        <div id = 'gpswarn' class = 'warn'><p id = 'gpswarntext' class = 'warntext'>You can't use Return' function and monitor coordinates of your Clover, because it's gps module has not caught enough satellites, or you are not using EKF2, also check the settings of your flight controller, following the <a href = 'https://clover.coex.tech/en/gps.html'>instructions</a>.<br/>If everything works correctly, then just wait a bit, when your drone catches a sufficient number of satellites, it's marker will be displayed on the map.</p><img class='close' id='closegpswarn' src = '../../assets/close.png'/></div>
+        <div class = 'warn' id = 'cloverside'><p id = 'cloversidetext' class = 'warntext'> </p><img class='close' id='closecloverside' src = '../../assets/close.png'/></div>
         <p id = 'status'>Disconnected</p>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <div id = 'loading'><img src = '../../assets/logo_x192.svg' id='loadingLogo'/></div>
