--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -70,6 +70,7 @@
                 </div>
               </div>
         </div>
+        <div id = 'rtherror' class = 'warn'><p id = 'rtherrortext' class = 'warntext'>The drone cannot be returned because it has no GPS data.</p><img class='close' id='closertherror' src = '../../assets/close.png'/></div>
         <div id = 'rtowarn' class = 'warn'><p class = 'warntext'>Please check parameters in settings, such as 'Return Type', 'Return Altitude', 'Return Speed' and 'Action After Return' in order for this function to execute as you need.</p><img class='close' id='closertowarn' src = '../../assets/close.png'/></div>
         <div id = 'gpswarn' class = 'warn'><p id = 'gpswarntext' class = 'warntext'>You can't use Return' function and monitor coordinates of your Clover, because it's gps module has not caught enough satellites, or you are not using EKF2, also check the settings of your flight controller, following the <a href = 'https://clover.coex.tech/en/gps.html'>instructions</a>.<br/>If everything works correctly, then just wait a bit, when your drone catches a sufficient number of satellites, it's marker will be displayed on the map.</p><img class='close' id='closegpswarn' src = '../../assets/close.png'/></div>
         <div class = 'warn' id = 'cloverside'><p id = 'cloversidetext' class = 'warntext'> </p><img class='close' id='closecloverside' src = '../../assets/close.png'/></div>
