--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -75,6 +75,7 @@
         <div id = 'gpswarn' class = 'warn'><p id = 'gpswarntext' class = 'warntext'>You can't use Return' function and monitor coordinates of your Clover, because it's gps module has not caught enough satellites, or you are not using EKF2, also check the settings of your flight controller, following the <a href = 'https://clover.coex.tech/en/gps.html'>instructions</a>.<br/>If everything works correctly, then just wait a bit, when your drone catches a sufficient number of satellites, it's marker will be displayed on the map.</p><img class='close' id='closegpswarn' src = '../../assets/close.png'/></div>
         <div class = 'warn' id = 'cloverside'><p id = 'cloversidetext' class = 'warntext'> </p><img class='close' id='closecloverside' src = '../../assets/close.png'/></div>
         <p id = 'status'>Disconnected</p>
+        <p id="alt"></p><p id="volt"></p>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <div id = 'loading'><img src = '../../assets/logo_x192.svg' id='loadingLogo'/></div>
         <script src = './index.js' type = 'module'></script>
