photo slide style fixes

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -32,7 +32,7 @@
                     <div id = 'map'></div>
                 </div>
                 <div class="swiper-slide" id = 'photoslide'>
-                    <p id = 'pt' align="center">LAST PHOTO FROM CLOVER</p><div id='photocont'><div id="photo"><p id = 'snp' align="center">There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div>
+                    <p id = 'pt' align="center">LAST PHOTO FROM CLOVER</p><div id='photocont'><div id="photo"><br/><br/><br/><p id = 'snp' align="center">There is no data fetched.</p></div><button id = 'gp' >Get photo</button></div>
                 </div>
                 <div class="swiper-slide">
                     <div id = 'upload'>
