upload accept fix

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -32,7 +32,7 @@
         <div id = 'upload'>
             <p id = 'ut'>Upload Mission</p>
             <label for = "mission" id = "fl">Choose code</label>
-            <input type = "file" id = "mission" name = "mission" accept="text/x-python"/>
+            <input type = "file" id = "mission" name = "mission" accept="text/x-python, .py"/>
             <button id = 'ub'>Upload & Run</button>
         </div>
         <div id = 'missionOut' class = 'warn'><p id = 'missionOuttext' class = 'warntext'></p><img class='close' id='closemissionOut' src = '../../assets/close.png'/></div>
