upload accept fix

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -38,7 +38,7 @@
                     <div id = 'upload'>
                         <p id = 'ut'>Upload Mission</p>
                         <label for = "mission" id = "fl">Choose code file</label>
-                        <input type = "file" id = "mission" name = "mission" accept="text/x-python"/>
+                        <input type = "file" id = "mission" name = "mission" accept="text/x-python, .py"/>
                         <button id = 'ub'>Upload & Run</button>
                     </div></div>
                 <div class="swiper-slide">
