--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <body>
         <div id = 'heading'>
             <img id = 'background' src = './assets/head.jpg' alt='clover'/>
-            <p onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm1'>Project</p>
-            <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
-            <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
+            <div id = 'menucont'>
+                <p onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm1'>Project</p>
+                <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
+                <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
+            </div>
             <button id = 'login' onclick = "location.href = './login'">Sign In</button>
             <button id = 'app' onclick = "location.href = './app/desktop/'">App</button>
             <h1 id='title'>The Clover Rescue Project</h1>
