--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="initial-scale=0.4">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <title>The Clover Rescue Project</title>
         <script>if(screen.width>screen.height){location.href="../"}</script>
         <link rel="icon" type="image/x-icon" href="../assets/fav.ico">
