--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <title>The Clover Rescue Project</title>
         <script>if(screen.width>screen.height){location.href="../"}</script>
         <link rel="icon" type="image/x-icon" href="../assets/fav.ico">
@@ -16,12 +16,12 @@
         <link rel ="stylesheet" href="../loading-bar.css">
     </head>
     <body>
-        <img src = "../assets/rpi4.png" id = "rpi" alt='rpi4'/>
+        <img src = "../assets/rpi4.png" id = "rpi" alt='rpi4' alt='rpi4'/>
         <div id = 'title1'></div>
         <button id = 'app' onclick = "location.href = '../app/mobile/index.html'">App</button><button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
         <div id = 'title2'><h1>The<br/>Clover Rescue<br/>Project</h1></div>
         <img id = "clover" src = "../assets/head.jpg" alt='clover'/>
-        <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down"/></div>
+        <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down" alt='down'/></div>
         <div id = "main">
             <p id = 'pt'>Project</p><p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p>
             <p id = "rht">Required Hardware</p><p id = "rh">The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! </p>
@@ -32,7 +32,7 @@
             <p id = 'status'></p>
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
         </div>
-        <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo'/></div>
+        <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo' alt='loading...'/></div>
         <script src = 'index.js'></script>
     </body>
 </html>
