--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>The Clover Rescue Project</title>
         <script>if(screen.width<screen.height){location.href="./mobile/index.html"}</script>
+        <meta name="theme-color" content="#111"/>
+        <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
+        <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="./manifest.json">
