service worker bug fixed, pwa optimization

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <title>The Clover Rescue Project</title>
         <script>if(screen.width>screen.height){location.href="../"}</script>
-        <link rel="icon" type="image/x-icon" href="../assets/fav.ico">
+        <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="../manifest.json">
-        <meta name="theme-color" content="#000"/>
-        <link rel="apple-touch-icon" href="/assets/icon192.png">
+        <meta name="theme-color" content="#111"/>
+        <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
         <link rel = "stylesheet" href = "index.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
