--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>The Clover Rescue Project</title>
+        <meta name="theme-color" content="#111"/>
+        <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
         <link rel="icon" type="image/x-icon" href="../assets/fav.ico">
+        <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <meta charset = 'utf8'/>
         <link rel="manifest" href="../manifest.json">
@@ -20,7 +23,7 @@
         <input placeholder='Password' id = 'password' type='password'/>
         <button id = 'signin' onclick = 'signin();'>Sign In</button>
         <p id = 'status'></p>
-        <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo'/></div>
+        <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo' alt='loading'/></div>
         <script src = "login.js"></script>
     </body>
 </html>
