--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>The Clover Rescue Project</title>
         <script>if(screen.width<screen.height){location.href="../mobile/index.html"}</script>
+        <meta name="theme-color" content="#111"/>
+        <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
+        <meta name="description" content="Clover Rescue Project">
         <link rel="icon" type="image/x-icon" href="../../assets/fav.ico">
         <link rel="manifest" href="../../manifest.json">
         <link rel = 'stylesheet' href = 'index.css'/>
