--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <script>if(screen.width>screen.height){location.href="../desktop/index.html"}</script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+        <meta name="description" content="Clover Rescue Project">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <meta charset = 'utf8'/>
         <title>The Rescue Clover Project</title>
         <link rel="icon" type="image/x-icon" href="../../assets/fav.ico">
+        <meta name="theme-color" content="#111"/>
+        <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
         <link rel="manifest" href="../../manifest.json">
         <link rel="stylesheet" href="./index.css" />
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
