interface bug fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>The Clover Rescue Project</title>
-        <script>if(screen.width<screen.height){location.href="./mobile/index.html"}</script>
+        <script>if(window.innerWidth<window.innerHeight){location.href="./mobile/index.html"}</script>
         <meta name="theme-color" content="#111"/>
         <link rel="apple-touch-icon" href="/assets/logo_x192.svg">
         <meta name="description" content="Clover Rescue Project">
