--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,7 +4,7 @@
         <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <title>The Clover Rescue Project</title>
-        <script>if(screen.width>screen.height){location.href="../"}</script>
+        <script>if(window.innerWidth>window.innerHeight){location.href="../"}</script>
         <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="../manifest.json">
         <meta name="theme-color" content="#111"/>
@@ -18,10 +18,9 @@
     </head>
     <body>
         <img src = "../assets/rpi4.png" id = "rpi" alt='rpi4' alt='rpi4'/>
-        <div id = 'title1'></div>
-        <button id = 'app' onclick = "location.href = '../app/mobile/index.html'">App</button><button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
-        <div id = 'title2'><h1>The<br/>Clover Rescue<br/>Project</h1></div>
         <img id = "clover" src = "../assets/head.jpg" alt='clover'/>
+        <div id = 'title'><h1>The<br/>Clover Rescue<br/>Project</h1></div>
+        <button id = 'app' onclick = "location.href = '../app/mobile/index.html'">App</button><button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
         <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down" alt='down'/></div>
         <div id = "main">
             <p id = 'pt'>Project</p><p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p>
