--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
         <meta charset = 'utf8'/>
         <link rel="manifest" href="../manifest.json">
         <link rel = 'stylesheet' href = 'login.css'/>
-        <script>function gcd(a, b){return(b==0)?a:gcd(b,a%b);} w=screen.width;h=screen.height;r=gcd(w,h);if(!(w/r>=h/r)){let mobile = document.createElement('link');mobile.href = 'mobile.css';mobile.rel = 'stylesheet';document.getElementsByTagName('head')[0].appendChild(mobile)}</script>
+        <script>if(window.innerWidth<window.innerHeight){let mobile = document.createElement('link');mobile.href = 'mobile.css';mobile.rel = 'stylesheet';mobile.id='mobilecss';document.getElementsByTagName('head')[0].appendChild(mobile)}</script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
         <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
