ui fixes; new project description

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id = 'main'>
             <img id = 'mb1' src = './assets/mb1.jpg' alt='tx'/>
             <p id = 'pt' ><b>Project</b></p>
-            <p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p><br/><br/><br/>
+            <p id = 'p'>The key feature of our software is that users can manage their Clover from anywhere in the world!<br/><br/>This software replaces FTP and SSH (users can upload the code to their drone and run it directly from our website). <br/>If radio communication with the Clover is lost, it can be returned to the user's or takeoff location with just one click. <br/>Users can monitor the status in realtime, as well as location, camera data, and airborne position data of the drone.<br/>There are functions that can be useful in emergency situations, such as landing, hovering and disarming the drone remotely from our website!</p><br/><br/><br/>
             <img id = 'mb2' src = './assets/rpi4.png' alt='rpi4'/>
             <img id = 'mb3' src = './assets/rpicamera.png' alt='camera'/>
             <img id = 'mb4' src = './assets/modem.png' alt='modem'/>
