new project description

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -23,7 +23,7 @@
         <button id = 'app' onclick = "location.href = '../app/mobile/index.html'">App</button><button id = 'signin' onclick = "location.href = '../login/index.html'">Sign In</button>
         <div id = "footer"><img src = "../assets/line-angle-down.svg" id = "down" alt='down'/></div>
         <div id = "main">
-            <p id = 'pt'>Project</p><p id = 'p'>Our project was created in order to help pilots return their flew away drones!<br/><br/><u> So, how it works? </u><br/><br/>Having installed the necessary hardware and software on the drone, you can go to our website and be able to monitor the state of the drone and return it home with one click, even if the radio connection is completely lost! <br/>Moreover, in the event of an emergency situation, our software will determine it and offer options for further actions.</p>
+            <p id = 'pt'>Project</p><p id = 'p'>You can manage your Clover from anywhere in the world!<br/><br/>- Replaces FTP and SSH <br/>- Your drone can be returned to your coordinates or takeoff coordinates with just one click. <br/>- You can monitor the status of your drone in realtime<br/>- Useful functions: Land; Hover; Disarm</p>
             <p id = "rht">Required Hardware</p><p id = "rh">The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! </p>
             <p id = 'rt' >Sign up</p><br/><p id = 'rt2'>to access the software</p>
             <input placeholder='Nickname' id = 'nickname'/>
