adaptation bug fix

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,7 +4,7 @@
         <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <title>The Clover Rescue Project</title>
-        <script>if(window.innerWidth>window.innerHeight){location.href="../"}</script>
+        <script>if(screen.width>screen.height){location.href="../"}</script>
         <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
         <link rel="manifest" href="../manifest.json">
         <meta name="theme-color" content="#111"/>
