adaptation bug fix

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script>if(window.innerWidth>window.innerHeight){location.href="../desktop/index.html"}</script>
+        <script>if(screen.width>screen.height){location.href="../desktop/index.html"}</script>
         <meta name="description" content="Clover Rescue Project">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5"/>
         <meta charset = 'utf8'/>
