--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,6 @@
         <meta charset = 'utf8'/>
         <link rel="manifest" href="../manifest.json">
         <link rel = 'stylesheet' href = 'login.css'/>
-        <script>if(screen.width<screen.height){let mobile = document.createElement('link');mobile.href = 'mobile.css';mobile.rel = 'stylesheet';mobile.id='mobilecss';document.getElementsByTagName('head')[0].appendChild(mobile)}</script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
         <script data-pace-options='{ "ajax": false}' src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
@@ -18,11 +17,13 @@
         <link rel ="stylesheet" href="../loading-bar.css">
     </head>
     <body>
-        <p id = 'title'>Sign In</p>
-        <input placeholder='Nickname' id = 'nickname'/>
-        <input placeholder='Password' id = 'password' type='password'/>
-        <button id = 'signin' onclick = 'signin();'>Sign In</button>
-        <p id = 'status'></p>
+        <div id = 'siContainer'>
+            <p id = 'title'>Sign In</p><br/><br/>
+            <input placeholder='Nickname' id = 'nickname'/><br/><br/>
+            <input placeholder='Password' id = 'password' type='password'/><br/><br/>
+            <button id = 'signin' onclick = 'signin();'>Sign In</button><br/><br/>
+            <p id = 'status'></p>
+        </div>
         <div id = 'loading'><img src = '../assets/logo_x192.svg' id='loadingLogo' alt='loading'/></div>
         <script src = "login.js"></script>
     </body>
