--- a/index.html
+++ b/index.html
@@ -20,31 +20,42 @@
         <div id = 'heading'>
             <img id = 'background' src = './assets/head.jpg' alt='clover'/>
             <div id = 'menucont'>
+                <button id = 'login' onclick = "location.href = './login'">Sign In</button>
                 <p onclick = 'document.getElementById("p").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm1'>Project</p>
                 <p onclick = 'document.getElementById("rh").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm2'>Hardware</p>
                 <p onclick = 'document.getElementById("password").scrollIntoView({block: "center", behavior: "smooth"});' class = 'menu' id = 'm3'>Sign Up</p>
+                <button id = 'app' onclick = "location.href = './app/desktop/'">App</button>
             </div>
-            <button id = 'login' onclick = "location.href = './login'">Sign In</button>
-            <button id = 'app' onclick = "location.href = './app/desktop/'">App</button>
             <h1 id='title'>The Clover Rescue Project</h1>
             <img id = 'down' src = './assets/line-angle-down.svg' alt='down'/>
         </div>
         <div id = 'main'>
             <img id = 'mb1' src = './assets/mb1.jpg' alt='tx'/>
-            <p id = 'pt' ><b>Project</b></p>
-            <p id = 'p'>The key feature of our software is that users can manage their Clover from anywhere in the world!<br/><br/>This software replaces FTP and SSH (users can upload the code to their drone and run it directly from our website). <br/>If radio communication with the Clover is lost, it can be returned to the user's or takeoff location with just one click. <br/>Users can monitor the status in realtime, as well as location, camera data, and airborne position data of the drone.<br/>There are functions that can be useful in emergency situations, such as landing, hovering and disarming the drone remotely from our website!</p><br/><br/><br/>
-            <img id = 'mb2' src = './assets/rpi4.png' alt='rpi4'/>
-            <img id = 'mb3' src = './assets/rpicamera.png' alt='camera'/>
-            <img id = 'mb4' src = './assets/modem.png' alt='modem'/>
-            <p id = 'rht' >Required Hardware</p>
-            <p id = 'rh'>
-                The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! 
-            </p>
-            <p id = 'rt' >Sign up</p><br/><p id = 'rt2'>to get The Clover Rescue Project software for free!</p>
+            <div id="projectCont">
+                <p id = 'pt' ><b>Project</b></p>
+                <p id = 'p'>The key feature of our software is that users can manage their Clover from anywhere in the world!<br/><br/>
+                This software replaces FTP and SSH (users can upload the code to their drone and run it directly from our website). <br/>
+                If radio communication with the Clover is lost, it can be returned to the user's or takeoff location with just one click. <br/>
+                Users can monitor the status in realtime, as well as location, camera data, and airborne position data of the drone.<br/>
+                There are functions that can be useful in emergency situations, such as landing, hovering and disarming the drone remotely from our website!</p><br/><br/><br/>
+            </div>
+            <div id="hardwareCont">
+                <p id = 'rht' >Required Hardware</p>
+                <p id = 'rh'>
+                    The all you need - Raspberry Pi 3/4, camera and USB WIFI Modem! 
+                </p>
+                <div id="hardImgCont">
+                    <img id = 'mb2' src = './assets/rpi4.png' alt='rpi4'/>
+                    <img id = 'mb3' src = './assets/rpicamera.png' alt='camera'/>
+                    <img id = 'mb4' src = './assets/modem.png' alt='modem'/>
+                </div>
+            </div>
             <div id = 'signupcont'>
-                <input placeholder='Nickname' id = 'nickname'/><br/><br/><br/>
-                <input placeholder='Password' id = 'password' type='password'/><br/><br/><br/>
-                <button id = 'signup' onclick = 'signup();'>Sign Up</button><br/><br/><br/>
+                <p id = 'rt' >Sign up</p>
+                <p id = 'rt2'>to get The Clover Rescue Project software for free!</p>
+                <input placeholder='Nickname' id = 'nickname'/>
+                <input placeholder='Password' id = 'password' type='password'/>
+                <button id = 'signup' onclick = 'signup();'>Sign Up</button>
                 <p id = 'status'></p>
             </div>
             <p id = 'floor'>Clover Rescue Team | CopterHack 2022</p>
